<!--Bottom Navigation Code-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:weightSum="100"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_purple_darker"
        android:layout_weight="25">

        <ImageView
            android:id="@+id/home"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/home"
            android:focusable="true"
            android:gravity="center"
            android:onClick="home"
            android:src="@drawable/home_new"
            android:textColor="#FFF"
            android:textSize="20sp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Home"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_purple"
        android:layout_weight="25">

        <ImageView
            android:id="@+id/putaway_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="true"
            android:contentDescription="@string/putaway"
            android:focusable="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="putaway"
            android:src="@drawable/receipt"
            android:textColor="#FFF"
            android:textSize="20sp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="PutAway"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="25"
        android:background="@color/light_purple_darker"

        >

        <ImageView
            android:id="@+id/pick_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="true"
            android:contentDescription="@string/picking"
            android:focusable="true"
            android:layout_gravity="center"
            android:onClick="picking"
            android:src="@drawable/picking"
            android:textColor="#FFF"
            android:textSize="20sp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Picking"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="25"
        android:background="@color/light_purple"

        >

        <ImageView
            android:id="@+id/packed_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="true"
            android:contentDescription="@string/packing"
            android:focusable="true"
            android:layout_gravity="center"
            android:onClick="packing"
            android:src="@drawable/packing"
            android:textColor="#FFF"
            android:textSize="20sp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Packing"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:background="@color/light_purple_darker"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/transfer_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="true"
            android:contentDescription="@string/transfer"
            android:focusable="true"
            android:layout_gravity="center"
            android:onClick="transfer"
            android:src="@drawable/transfer"
            android:textColor="#FFF"
            android:textSize="20sp" />
        <!--            android:background="@drawable/spinner_border"-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Transfer"
            android:textSize="12sp"
            android:textColor="@color/black" />


    </LinearLayout>
</LinearLayout>